# docsAI

./: .gitignore  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt
docstoteles/components/: chat.py
docstoteles/core/: config.py  database.py
docstoteles/models/: conversation.py  documents.py
docstoteles/pages/: 1_🔍_Scraping.py
docstoteles/services/: scraping_service.py
src/: Home.py
src/components/: document_viewr.py  sidebar.py
src/core/: utils.py
src/services/: ai_service.py  document_service.py
